<resources>
    <string name="app_name">ProfileEditor</string>
    <string name="disconnected">Disconnected</string>
    <string name="load_profile">Load profile</string>
    <string name="save_eeprom">Save EEPROM</string>
    <string name="send_json">Send JSON</string>
    <string name="cancel">Cancel</string>
    <string name="send_short">Send Short</string>
    <string name="label_connected">Connected</string>
    <string name="label_disconnected">Disconnected</string>
    <string name="USBready">USB Ready</string>
    <string name="USBnotgranted">USB Permission not granted</string>
    <string name="noUSB">No USB connected</string>
    <string name="USBdisconnected">USB disconnected</string>
    <string name="USBnotsupported">USB device not supported</string>
    <string name="baudrate">Baudrate:</string>
    <string name="bg">bg</string>


    <string-array name="speed">
        <item>9600</item>
        <item>19200</item>
        <item>38400</item>
        <item>57600</item>
        <item>115200</item>
        <item>230400</item>
        <item>460800</item>
        <item>921600</item>
    </string-array>
</resources>