<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_begin="?android:attr/actionBarSize" />


    <TextView
        android:id="@+id/UARTTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/disconnected"
        app:layout_constraintBottom_toTopOf="@+id/topGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/labelSpinnerTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/baudrate"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toTopOf="@+id/topGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/UARTTextview"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Spinner
        android:id="@+id/speedSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:entries="@array/speed"
        app:layout_constraintBottom_toTopOf="@+id/topGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/labelSpinnerTextview"
        app:layout_constraintTop_toTopOf="parent"
        />

        <ImageView
            android:id="@+id/bgImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:scaleX="0.4"
            android:scaleY="0.4"
            android:alpha="0.7"
            android:layout_gravity="center"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topGuideline"
            app:layout_constraintBottom_toTopOf="@+id/bottomGuideline"
            />

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topGuideline"
        app:layout_constraintBottom_toTopOf="@+id/bottomGuideline"


        />


    <ScrollView
       android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/topGuideline">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <Button
                android:id="@+id/importButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/load_profile"
                android:visibility="gone" />




            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:visibility="gone" />


            <GridLayout
                android:id="@+id/grid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:columnCount="2"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/exportJsonButton"
                    android:layout_gravity="fill"
                    android:layout_margin="2dp"
                    android:text="@string/send_json"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/exportShortButton"

                    android:layout_width="wrap_content"
                    android:layout_gravity="fill"
                    android:layout_margin="2dp"
                    android:text="@string/send_short"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/saveButton"
                    android:layout_gravity="fill"
                    android:layout_margin="2dp"
                    android:text="@string/save_eeprom"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/cancelButton"

                    android:layout_width="wrap_content"
                    android:layout_gravity="fill"
                    android:layout_margin="2dp"
                    android:text="@string/cancel"
                    android:visibility="gone" />
            </GridLayout>


        </LinearLayout>
    </ScrollView>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.95" />


</androidx.constraintlayout.widget.ConstraintLayout>